[gd_scene load_steps=7 format=2]

[ext_resource path="res://jump.wav" type="AudioStream" id=1]
[ext_resource path="res://level1.wav" type="AudioStream" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://level2.wav" type="AudioStream" id=4]
[ext_resource path="res://level3.wav" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=1]

[node name="Player" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0198889, 0, 0.0762978 )
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
current = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )
shape = SubResource( 1 )

[node name="batendoasas" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 1 )
max_db = -7.0

[node name="tema" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )

[node name="level1" type="Timer" parent="tema"]
wait_time = 21.0
one_shot = true
autostart = true

[node name="tema2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
max_db = -7.0

[node name="level2" type="Timer" parent="tema2"]
wait_time = 20.0

[node name="tema3" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
max_db = -7.0

[node name="level3" type="Timer" parent="tema3"]
wait_time = 60.0
autostart = true
[connection signal="timeout" from="tema/level1" to="." method="_on_level1_timeout"]
[connection signal="timeout" from="tema2/level2" to="." method="_on_level2_timeout"]
